src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <label>Eloqua Lead Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eloqua_Status__c</fullName>
        <description>Multi-picklist to allow multiple Eloqua Status selections</description>
        <label>Eloqua Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPT-IN</fullName>
                </value>
                <value>
                    <fullName>OPT-OUT</fullName>
                </value>
                <value>
                    <fullName>SIGNATURE EMAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>Alternate email address</description>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Picklist__c</fullName>
        <label>Email Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Welcome_Packet_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Welcome packet was emailed.</description>
        <label>Emailed Welcome Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emotional_Triggers__c</fullName>
        <inlineHelpText>Are you currently experiencing limitations to your quality of life? 

Objective: Identify emotional triggers.</inlineHelpText>
        <label>Experiencing quality of life limitation?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used to map IDs from external systems.</description>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Quoted__c</fullName>
        <label>Fees Quoted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Quote Given</fullName>
                </value>
                <value>
                    <fullName>$4000 to $8000 Single</fullName>
                </value>
                <value>
                    <fullName>$23000 to $30000 Upper or Lower Jaw</fullName>
                </value>
                <value>
                    <fullName>$48000 to $57000 Full Mouth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Agent_Notes__c</fullName>
        <description>Notes from initial conversation with field agent.</description>
        <label>Field Agent Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You Interested in Financing Info?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flossing_Schedule__c</fullName>
        <description>Added for LeadLife</description>
        <label>Flossing Schedule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frustration_Level__c</fullName>
        <description>Added for LeadLife</description>
        <label>Frustration Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF(ISBLANK( FirstName), LastName,
IF(ISBLANK(LastName),FirstName,
FirstName &amp; &quot; &quot; &amp; LastName
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Phone__c</fullName>
        <description>Phone number of patient&apos;s general practitioner</description>
        <label>GP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GP_of_Record__c</fullName>
        <description>Name of patient&apos;s general practitioner</description>
        <label>GP of Record</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <label>Guest Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gum_Disease__c</fullName>
        <description>Added for LeadLife</description>
        <label>Gum Disease</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_consulted_for_implants_before__c</fullName>
        <inlineHelpText>Have you consulted for implants before? 

Objective: Identify their knowledge of dental implant capabilities  and cost</inlineHelpText>
        <label>Have you consulted for implants before?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Conditions__c</fullName>
        <description>Added for LeadLife</description>
        <label>Health Conditions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hot_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Long_Have_You_Thought_about_Implants__c</fullName>
        <label>How Long Have You Thought about Implants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New to the idea</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months to a year</fullName>
                </value>
                <value>
                    <fullName>More than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_of_Dentures__c</fullName>
        <description>Added for LeadLife</description>
        <label>Impact of Dentures</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_on_Personal_Relationships__c</fullName>
        <description>Added for LeadLife</description>
        <label>Impact on Personal Relationships</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Preferences__c</fullName>
        <description>Added for LeadLife</description>
        <label>Implant Preferences</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implants_Consult__c</fullName>
        <description>Added for LeadLife</description>
        <label>Consulted Dentist About Implants</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_House_Seminar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In House Seminar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Call__c</fullName>
        <description>Each in bound call must be registered</description>
        <label>Inbound Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Inquiry</fullName>
                </value>
                <value>
                    <fullName>Non-Sales Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intial_Agent_Call_Back__c</fullName>
        <label>Intial Agent Call Back</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Call</fullName>
                </value>
                <value>
                    <fullName>Second Call</fullName>
                </value>
                <value>
                    <fullName>Third Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_Upcoming_Event_Smile_Important__c</fullName>
        <label>Is there Upcoming Event-Smile Important?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Know_Someone_With_Dental_Implants__c</fullName>
        <description>Added for LeadLife</description>
        <label>Know Someone With Dental Implants</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken__c</fullName>
        <label>Language Spoken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Dental_Visit__c</fullName>
        <label>Last Dental Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 6 months</fullName>
                </value>
                <value>
                    <fullName>6 - 12 Months</fullName>
                </value>
                <value>
                    <fullName>Over a Year</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Marketing_Source__c</fullName>
        <description>This field should be populated with the latest marketing source such as phone number dialed, etc.</description>
        <label>Last Marketing Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PreScreen_Method__c</fullName>
        <label>Last PreScreen Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFCU</fullName>
                </value>
                <value>
                    <fullName>Experian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadLifeID__c</fullName>
        <label>LeadLifeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadScore__c</fullName>
        <description>New Calculated Pre-Screen that relies on pre-screen value and census info.</description>
        <formula>/*New Rule - TUPIQ TEST - 2/23/2015 CM */
/*if( ispickval(Contact_Agency__c,&quot;ClearVantage&quot;) || NOT(ISBLANK(Referral_Office__c))  ,&apos;Gold&apos;, 
  if( Center__r.Use_TUPIQ__c,

    if(TransUnion_Score__c&gt;=720 || ((TransUnion_Score__c&lt;650 || isblank(TransUnion_Score__c)) &amp;&amp; (VALUE(Prospect_All_Score__c)&gt;=-1.15 &amp;&amp; VALUE(Prospect_All_Score__c)&lt;0)),&apos;Green&apos;,
      if(TransUnion_Score__c&gt;=650 || ((TransUnion_Score__c&lt;650 || isblank(TransUnion_Score__c)) &amp;&amp; (VALUE(Prospect_All_Score__c)&gt;=-1.45 &amp;&amp; Value(Prospect_All_Score__c)&lt;0)), &apos;Yellow&apos;,
        if(TransUnion_Score__c&gt;=0 || (isblank(TransUnion_Score__c) &amp;&amp; VALUE(Prospect_All_Score__c) &lt; -1.45), &apos;Red&apos;,
          if(isblank(TransUnion_Score__c) &amp;&amp; isblank(Prospect_All_Score__c), &apos;Other&apos;,&apos;Blue&apos;)
        )
      )
    ) 
  ,  	

    if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; value(Prospect_IQ_Score__c) &gt;= -2.4 &amp;&amp; !isblank(Prospect_IQ_Score__c),&apos;Green&apos;, 
      if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; value(Prospect_IQ_Score__c) &gt;= -2.7 &amp;&amp; !isblank(Prospect_IQ_Score__c),&apos;Yellow&apos;, 
        if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; value(Prospect_IQ_Score__c) &lt; -2.7 &amp;&amp; !isblank(Prospect_IQ_Score__c),&apos;Red&apos;,TEXT(Pre_Screen__c))
      )
    )
  )
)*/



/* New Rule - All PIQ - 05/31/2018 */ 
/* if the patient is a referral from a referral partner they are marked Gold regardless of prescreen */
if(ISPICKVAL(Contact_Agency__c,&quot;ClearVantage&quot;) || NOT(ISBLANK(Referral_Office__c)), &apos;Gold&apos;, 
  /* if the record is created after this date then this formula is run */
  if(CreatedDate &gt;= DATETIMEVALUE(&quot;2018-05-31 00:00:00&quot;),
    /* if the prescreen is in this list  the leadscore is set to the prescreen value otherwise the formula is executed to set leadscore */
    if( NOT(CONTAINS(&quot;Green:Yellow:Red:Insufficient Information:PO Box:Website Down-No Prescreen&quot;, TEXT(Pre_Screen__c))),
      /* if the prospect all score is of a certain value, not null and is a blue the leadscore is set as follows */
      if(VALUE(Prospect_All_Score__c) &gt;= -2.3 &amp;&amp; !ISBLANK(Prospect_All_Score__c) &amp;&amp; (TEXT(Pre_Screen__c) = &apos;Blue (No Hit)&apos;),&apos;Green&apos;, 
        if(VALUE(Prospect_All_Score__c) &gt;= -3.05 &amp;&amp; !ISBLANK(Prospect_All_Score__c) &amp;&amp; (TEXT(Pre_Screen__c) = &apos;Blue (No Hit)&apos;),&apos;Yellow&apos;, 
          if(!ISBLANK(Prospect_All_Score__c) &amp;&amp; (TEXT(Pre_Screen__c) = &apos;Blue (No Hit)&apos;),&apos;Red&apos;, &apos;Blue (No Hit)&apos;
          )
        )
      ), TEXT(Pre_Screen__c)
    ), TEXT(Pre_Screen__c)
  ) 
)</formula>
        <label>LeadScore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>Number used for Call Center web lead distribution</description>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <formula>IF( ISPICKVAL(Inbound_Call__c ,&quot;Non-Sales Call&quot;),&quot;Non-Sales Call&quot;,
IF(
AND(
ISPICKVAL(Inbound_Call__c ,&quot;Dental Inquiry&quot;),
OR(
ISPICKVAL(Call_Result__c ,&quot;Fielded Lead&quot;),
ISPICKVAL(Call_Result__c ,&quot;Out Bound Follow-up&quot;),
ISPICKVAL(Call_Result__c ,&quot;Renurture&quot;)
)
),&quot;Undetermined&quot;,
&quot;Dental Inquiry&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Message_to_Confirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left Message to Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lending_Club_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://www.lendingclub.com/patientsolutions/check-your-rate?pfn=&quot; &amp;  FirstName  &amp; &quot;&amp;pln=&quot; &amp;  LastName &amp; &quot;&amp;addr1=&quot; &amp;  Street &amp; &quot;&amp;zip=&quot; &amp; LEFT( PostalCode , 5) &amp; &quot;&amp;city=&quot; &amp;  City  &amp; &quot;&amp;state=&quot; &amp; State &amp; &quot;&amp;phone=&quot; &amp; 
substitute(substitute(substitute(substitute(substitute(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;#&quot;,&quot; &quot;),&quot;=&quot;,&quot; &quot;) 
&amp; &quot;&amp;email=&quot; &amp; Email 
, &quot;Open Credit Application&quot;,&quot;_blank&quot;)</formula>
        <label>Lending Club Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Of_Condition__c</fullName>
        <label>Length Of Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Very Short (Less than 1 Month)</fullName>
                </value>
                <value>
                    <fullName>2. Short (1-12 Months)</fullName>
                </value>
                <value>
                    <fullName>3. Moderate (1-3 Years)</fullName>
                </value>
                <value>
                    <fullName>4. Long (3-5 Years)</fullName>
                </value>
                <value>
                    <fullName>5. Very Long (5+ Years)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Concern__c</fullName>
        <label>Main Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MapGoogle__c</fullName>
        <formula>HYPERLINK(

&quot;https://www.google.com/maps?q=&quot;

&amp; SUBSTITUTE(Street, &apos; &apos;, &apos;+&apos;)  
&amp;&quot;,+&quot;
&amp; SUBSTITUTE(City, &apos; &apos;, &apos;+&apos;)  
&amp;&quot;,+&quot;
&amp; SUBSTITUTE(State, &apos; &apos;, &apos;+&apos;)
, &quot;Google Map&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Google</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Agent__c</fullName>
        <description>Emails sent for marketing followup</description>
        <label>Marketing Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Janelle Gladstone</fullName>
                    <default>true</default>
                    <label>Janelle Gladstone</label>
                </value>
                <value>
                    <fullName>Mary Helen Turner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Source_Formula__c</fullName>
        <formula>/* modified by cm on 2012-2-8 - this results in a blank or null value in all instances, so I&apos;m not sure why it&apos;s out here beyond it being used at some point in the past. I&apos;m going to grab it to filter out special characters from the incoming phone calls so I can use this field to match to campaigns created or updated going forward - used by trigger UpdateCampaignMemberStatu
 
CASE( Marketing_Source__c , 
&quot;&quot;,&quot;&quot;, 
&quot;&quot;) 
*/ 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Marketing_Source__c, &apos;(&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;),&apos; &apos;,&apos;&apos;),&apos;-&apos;,&apos;&apos;),&apos;#&apos;,&apos;&apos;),&apos;=&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Source (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <description>This field identifies the source of the lead.</description>
        <inlineHelpText>Enter the toll free or marketing number called into this field.</inlineHelpText>
        <label>Marketing Source</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_or_Damaged__c</fullName>
        <description>Added for LeadLife</description>
        <label>How Many Missing or Damaged Teeth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivational_Reason__c</fullName>
        <label>Motivational Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Appearance</fullName>
                </value>
                <value>
                    <fullName>Special Occasion Upcoming</fullName>
                </value>
                <value>
                    <fullName>Relationship Issue</fullName>
                </value>
                <value>
                    <fullName>Urging of someone (Dr., Friend, Etc)</fullName>
                </value>
                <value>
                    <fullName>Eating/Chewing</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Dentures/Partials are a Hassle</fullName>
                </value>
                <value>
                    <fullName>Dental Pain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mouthwash_Daily__c</fullName>
        <description>Added for LeadLife</description>
        <label>Mouthwash Daily</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Center__c</fullName>
        <description>Evaluates to the nearest center 2013 from the Zip Demographics table.</description>
        <formula>/*Zip_Demographic__r.Nearest_Center_2014__r.Name*/
/*Zip_Demographic__r.Nearest_Center_2015__r.Name*/
/*Zip_Demographic__r.Nearest_Center_2016__r.Name*/
Zip_Demographic__r.Recommended_Center__r.Name</formula>
        <label>Nearest Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Network__c</fullName>
        <formula>Zip_Demographic__r.Nearest_Network__r.Name</formula>
        <label>Nearest Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_or_Existing_Prospective_Patient__c</fullName>
        <formula>IF(DATEVALUE(CreatedDate) = TODAY(), &quot;New&quot;,&quot;Existing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New or Existing Prospective Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newspaper_Language__c</fullName>
        <label>Newspaper Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newspaper_Source__c</fullName>
        <label>Newspaper Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta Journal</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Chicago Sun Times</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver Post</fullName>
                </value>
                <value>
                    <fullName>Denver RM News</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Naperville Sun</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>St. Louis</fullName>
                </value>
                <value>
                    <fullName>USA Today</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Letter Sent - Patient consultation in next few days.</description>
        <inlineHelpText>No Letter Sent - Patient consultation in next few days.</inlineHelpText>
        <label>No Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Sales_Call_Result__c</fullName>
        <label>Non-Sales Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inbound_Call__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dead Air</fullName>
                </value>
                <value>
                    <fullName>Transfer to Corporate</fullName>
                </value>
                <value>
                    <fullName>Fax Machine</fullName>
                </value>
                <value>
                    <fullName>Hang up (before Agent can speak)</fullName>
                </value>
                <value>
                    <fullName>Transfer to Center</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Non Dental Implant Request (Gen DDS)</fullName>
                </value>
                <value>
                    <fullName>Political Call/Recording</fullName>
                </value>
                <value>
                    <fullName>ClearDentist Transfer</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Vendors</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Times_Schedule__c</fullName>
        <label>Number of Times Scheduled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Scheduled Consultation</fullName>
                </value>
                <value>
                    <fullName>2nd Scheduled Consultation</fullName>
                </value>
                <value>
                    <fullName>3rd Scheduled Consultation</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OBJECTION__c</fullName>
        <description>Consult sched too full</description>
        <label>Objection</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Checked</fullName>
                    <default>true</default>
                    <label>Not Checked</label>
                </value>
                <value>
                    <fullName>Information Gathering</fullName>
                </value>
                <value>
                    <fullName>Cost Prohibitive</fullName>
                </value>
                <value>
                    <fullName>Insurance Issues</fullName>
                </value>
                <value>
                    <fullName>Location/Distance</fullName>
                </value>
                <value>
                    <fullName>Scheduling Issues</fullName>
                </value>
                <value>
                    <fullName>Health Issues</fullName>
                </value>
                <value>
                    <fullName>Family Conference</fullName>
                </value>
                <value>
                    <fullName>Consult Sched Too Full</fullName>
                </value>
                <value>
                    <fullName>Price shopping</fullName>
                </value>
                <value>
                    <fullName>Future Candidate</fullName>
                </value>
                <value>
                    <fullName>Calling for Someone Else</fullName>
                </value>
                <value>
                    <fullName>Hung Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Transportation Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSE_Master__c</fullName>
        <label>OSE_Master</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-- MASTER --</fullName>
                    <default>true</default>
                    <label>-- MASTER --</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_B_Marketing_Email__c</fullName>
        <description>An email will be sent to patients who have not scheduled or followed through with treatment.</description>
        <inlineHelpText>Unscheduled or no show patients.</inlineHelpText>
        <label>O/B Marketing Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>What job or field does the prospective patient currently work at/in</description>
        <label>Occupation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupational_Status__c</fullName>
        <label>Occupational Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>